--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
  display: flex;
  flex-direction: column;
  align-items: center;
-
+  background-color: bisque;
 }
 
 h1{
@@ -23,18 +23,17 @@ hr{
   margin: 2rem auto;
 }
 
-.container{
+/* .container{
   width: 287px;
-  /* height: 88px; */
   height: 100px;
   background-color: rgba(80, 60, 226, 0.525);
   display: flex;
   justify-content: center;
   align-items: center;
   transition: all 0.5s;
-}
+} */
 
-a{
+/* a{
   width: 287px;
   height: 100px;
   padding: 27px 50px;
@@ -45,11 +44,10 @@ a{
   position: relative;
   transition: all 1s;
   overflow: hidden;
-}
+} */
 
-a::before{
+/* a::before{
   content: "Hover Me!";
-  /* background-color: rgb(112, 222, 182); */
   color: darkblue;
   display: flex;
   justify-content: center;
@@ -67,24 +65,64 @@ a::before{
 a:hover::before{
   transform: scale(1) ;
   opacity: 1; 
+} */
+
+ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style-type: none;
 }
 
-/* a::after{
-  content: "My Dear";
-  background-color: rgb(112, 222, 182);
-  color: darkblue;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translate(-100%, 100%);
-  transition: all 2s;
-} */
+ul li a{
+  display: block;
+  width: 120px;
+  height: 40px;
+  text-decoration: none;
+  line-height: 40px;
+  text-align: center;
+  color: deeppink;
+  font-size: large;
+  position: relative;
+  transition: all 0.5s;
+}
 
-/* a:hover::after{
-  transform: translate(0, 0); 
-} */
+a:hover{
+  color: rgb(81, 194, 141);
+}
+
+ul li span{
+  position: absolute;
+  width: 100%;
+  height: 25%;
+  /* width: 25%;
+  height: 100%; */
+  background-color: #262626;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: all 1s;
+}
+
+a:hover span{
+  transform: scaleY(1);
+}
+
+span:nth-child(2){
+  /* left: 25%; */
+  top: 25%;
+  transition-delay: 0.15s;
+}
+
+span:nth-child(3){
+  /* left: 50%; */
+  top: 50%;
+  transition-delay: 0.3s;
+}
+span:nth-child(4){
+  /* left: 75%; */
+  top: 75%;
+  transition-delay: 0.45s;
+}
